syntax = "proto3";

option java_multiple_files = true;
option java_package = "org.ur.comms";


// make package name for easier grouping
package comms;

message VoteRequest {
    // candidate id
    int32 candidate_id = 1;
    // current term of the sender
    int32 term = 3;
}

message VoteResponse {
    // respond with the newest term if leader term is out of date
    int32 term = 1;
    // vote granted or not
    bool granted = 2;
    // debugging text
    string text = 3;
}

message AppendEntriesRequest {
    // sender id
    int32 leader_id = 1;
    // current term of the sender
    int32 term = 2;
    // leader's commit index commit or not
    bool commit = 3;
    // last log index
    int32 last_log_index = 4;
    // last log entry, none for heartbeat
    int32 last_log_entry = 5;
    // new log entry, none for heartbeat
    int32 new_log_entry = 6;
}

message AppendEntriesResponse {
    // respond with the newest term if leader term is out of date
    int32 term = 1;
    // whether or not the append entry was successful
    bool success = 2;
}

// service indicates server behavior
service RaftServer {
    // request vote function
    rpc RequestVote (VoteRequest) returns (VoteResponse);

    // append entries, which also serves as heartbeat
    rpc AppendEntries (stream AppendEntriesRequest) returns (stream AppendEntriesResponse);

    // TODO register client etc

}


